--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -1,18 +1,18 @@
 @media(max-width:768px){
+
     body{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        background: url('../images/bg-mobile_1.png');
+        background: url(../images/bg-mobile_1.png);
         background-color: hsl(257, 40%, 49%);
-        max-width: 768px;
     }
 
     /* HEADER */
 
+    header{
+        height: 80px;
+    }
+
     .logo img{
-        width: 200px;
+        max-width: 200px;
     }
 
     /* MAIN */
@@ -21,31 +21,42 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
+        justify-content: space-between;
+        max-height: 80%;
     }
 
     .ilustracoes img{
-        max-width: 350px;
+        display: flex;
+        align-self: center;
+        max-width: 450px;
     }
 
-    .informacoes h2{
+    .informacoes{
+        max-width: 100%;
+        align-items: center;
+        text-align: center
+    }
+
+    .informacoes h1{
         font-size: 30px;
-        text-align: center;
     }
 
     .informacoes p{
-        font-size: 20px;
-        text-align: center;
+       font-size: 22px; 
     }
 
-    .informacoes .button{
-        align-self: center;
+    .informacoes .btn-register{
+        width: 250px;
+        height: 60px;
     }
-
     /* FOOTER */
 
     footer{
         display: flex;
         justify-content: center;
+    }
+
+    footer ul{
+        margin-top: 24px;
     }
 }
